Fix layout problem with Safari 7.1

--- a/GRDB.safariextension/grdb.css
+++ b/GRDB.safariextension/grdb.css
@@ -326,13 +326,13 @@ li.sent.drop {
 
 .double li.recv + li.sent.drop:nth-child(2n),
 .double li.sent.drop + li.recv:nth-child(2n) {
-	width:		20.95em;
+	width:		20.92em;
 	border-left: thin solid #aaa;
 }
 
 #mails li.mini.sent {
 	border-top:	thin solid #fff;
-	width:		11.95em;
+	width:		11.92em;
 }
 
 #mails li.sent + li.mini.recv {
